# pod1-software-core

./: .gitignore  .gitmodules  README.md  package-lock.json
dial/: dial.py
software/arduino/LAN/: LAN.ino  LAN2.ino
software/arduino/LAN2/: LAN2.ino
software/arduino/communication/zcm_transport_helpers/: arduino_cobs_serial_transport.hpp  arduino_simul_zcm_helpers.hpp
software/arduino/libraries/zcm/: zcm.c
software/arduino/libraries/zcm_utht/: zcm_utht.h
software/arduino/multiple_arduinos/receiver/: receiver.ino
software/arduino/multiple_arduinos/receiver_2/: receiver_2.ino
software/arduino/multiple_arduinos/sender/: sender.ino
software/arduino/sketches/arduino_test/: arduino_test.ino
software/communications/: README.md
software/communications/channels/: channel.cpp  channel.hpp  enums.hpp
software/communications/libraries/PacketSerial/: Makefile
software/communications/libraries/arduino_cobs_serial_transport/: arduino_cobs_serial_transport.cpp  arduino_cobs_serial_transport.hpp
software/communications/libraries/channel/: library.properties
software/communications/libraries/common/: library.properties
software/communications/libraries/linux_cobs_serial_transport/: linux_cobs_serial_transport.cpp
software/communications/libraries/sensor_headers/: library.properties
software/communications/libraries/zcm/: nonblocking.h  zcm-cpp.hpp
software/communications/libraries/zcm_utht/: zcm_utht.cpp  zcm_utht.h
software/communications/odroid/channel_class_test/: Makefile  channel_class_test.cpp
software/communications/odroid/channel_handler/: Makefile  channel_handler.cpp  channel_handler.hpp  channels.json
software/communications/odroid/reading_from_zcm_channels/: Makefile  channel_class_test  reading_from_zcm_channels  reading_from_zcm_channels.cpp
software/communications/odroid/zcm_receive/: Makefile  zcm_receive  zcm_receive.cpp
software/communications/odroid/zcm_send/: Makefile  zcm_send.cpp
software/core/: CommunicationCheckState.cpp  Makefile
software/core/Infrastructure/: README.md  package-lock.json
software/core/Infrastructure/AngularFrontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
software/core/Infrastructure/UTHT/: angular.json  electron-main.js  index.html  index.js  package-lock.json  package.json  renderer.js  style.css
software/core/Infrastructure/backend/: README.md  index.js  package-lock.json  package.json  test.json
software/core/Infrastructure/c++/: Makefile  my_file  socket  socket.cpp  socketBoost.cpp
software/core/Infrastructure/db/: pod1models.js
software/core/Infrastructure/scripts/: debug.txt  package-lock.json  package.json  route.rest  server.js
software/core/channel-monitor/include/: channel_monitor.hpp
software/core/controller/include/: controller.hpp
software/core/controller/src/: controller.cpp
software/core/example/: Makefile
software/core/example/include/: practice.lcm
software/core/example/src/: listen.cpp  (+2 more)
software/core/experiments/: Makefile
software/core/include/: ArmState.hpp  BrakeController.hpp  BrakeState.hpp  Channel.hpp  ChannelMonitor.hpp  CommunicationCheckState.hpp  Controller.hpp  Controls.hpp  DataProcessor.hpp  DataReader.hpp  EstopState.hpp  GapHeightReader.hpp  HealthMonitor.hpp  LockState.hpp  MotorController.hpp  NetworkMonitor.hpp  PIDController.hpp  PID_v1.h  State.hpp  StateMachine.hpp  SystemHealthState.hpp  TemperatureDataReader.hpp  channel_monitor.hpp  controller.hpp  state_enum.hpp
software/core/src/: ArmState.cpp  BrakeController.cpp  BrakeState.cpp  Channel.cpp  ChannelMonitor.cpp  CommunicationCheckState.cpp  Controller.cpp  Controls.cpp  DataProcessor.cpp  DataReader.cpp  DataReader.hpp  EstopState.cpp  GapHeightReader.cpp  HealthMonitor.cpp  LockState.cpp  MotorController.cpp  NetworkMonitor.cpp  PIDController.cpp  State.cpp  StateMachine.cpp  SystemHealthState.cpp  TemperatureDataReader.cpp  controller.cpp  main.cpp
software/core/tinyfsm/: sm.cpp  sm.h
software/git-practice/: .gitignore  Makefile  components.py  send_and_receive.py  test_message.lcm  test_message.py
software/git-practice/include/: lcm.h  lcm_handler.hpp
software/git-practice/src/: lcm_handler.cpp  main.cpp  practice.lcm
software/odroid/zcm_receive/: Makefile  zcm_receive.cpp
software/v2/: Makefile
software/v2/RaftLib/git-dep/affinity/: CMakeLists.txt  README.md  affinity.pc.in  moduleflags.cmake
software/v2/RaftLib/git-dep/affinity/.github/workflows/: main.yml
software/v2/RaftLib/git-dep/affinity/include/: CMakeLists.txt  affinity.hpp
software/v2/RaftLib/git-dep/affinity/src/: CMakeLists.txt  affinity.cpp
software/v2/RaftLib/git-dep/affinity/testsuite/: CMakeLists.txt  simple.cpp
software/v2/RaftLib/git-dep/cmdargs/: CMakeLists.txt  README.md  cmdargs.pc.in
software/v2/RaftLib/git-dep/cmdargs/include/: CMakeLists.txt  cmd
software/v2/RaftLib/git-dep/cmdargs/include/cmdargs/: command_arguments.h  command_option_base.hpp  command_option_multiple.tcc  command_option_single.tcc
software/v2/RaftLib/git-dep/cmdargs/testsuite/: CMakeLists.txt  basic.cpp  double.cpp  two.cpp
software/v2/RaftLib/git-dep/demangle/: CMakeLists.txt  README.md  demangle.pc.in  moduleflags.cmake
software/v2/RaftLib/git-dep/demangle/include/: CMakeLists.txt  demangle.hpp
software/v2/RaftLib/git-dep/demangle/src/: CMakeLists.txt  demangle.cpp
software/v2/RaftLib/git-dep/demangle/testsuite/: CMakeLists.txt  simple.cpp  stringdemangle.cpp
software/v2/RaftLib/git-dep/shm/: .gitignore  CMakeLists.txt  README.md  shm.pc.in
software/v2/RaftLib/git-dep/shm/cmake/: FindLIBRT.cmake  FindNUMA.cmake
software/v2/RaftLib/git-dep/shm/testsuite/: CMakeLists.txt
software/v2/include/: channel_handler.hpp  data.hpp  en.hpp  health_monitor.hpp  inv_data.hpp  state_machine.hpp
software/v2/src/: bundleData.json  channel_handler.cpp  data.cpp  health_monitor.cpp  inv_recv.cpp  main.cpp  sensor_data.csv  state_machine.cpp
software/zcm_utht/: zcm_utht.cpp  zcm_utht.h
software/zcm_utht/zcm_transport/: arduino_cobs_serial_transport.hpp
(+385 files in other folders)
